Add: modelling spread chapter

--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -169,6 +169,14 @@ doi="10.1007/978-1-4757-2763-0_14",
 url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 }
 
+@article{Taleb_BS_is_BS,
+	author = {Haug, Espen and Taleb, Nassim},
+	year = {2007},
+	month = {01},
+	pages = {},
+	title = {Why We Have Never Used the Black-Scholes-Merton Option Pricing Formula}
+}
+
 @article{CDS_Copula,
 	author = {Li, David Xianglin},
 	title = {On Default Correlation: A Copula Function Approach},
@@ -356,3 +364,125 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	year = {1995}
 }
 
+@article{Espen_Crack_Spread_Copula,
+	author = {Espen, Fred Benth and Kettler, Paul C.},
+	title = {Dynamic copula models for the spark spread},
+	journal = {Quantitative Finance},
+	volume = {11},
+	number = {3},
+	pages = {407-421},
+	year  = {2011},
+	publisher = {Routledge},
+	doi = {10.1080/14697688.2010.481629}
+}
+
+@article{Libor_OIS_model,
+	title = {What drives the Libor–OIS spread? Evidence from five major currency Libor–OIS spreads},
+	journal = {{International Review of Economics \& Finance}},
+	volume = {45},
+	pages = {358-375},
+	year = {2016},
+	issn = {1059-0560},
+	doi = {https://doi.org/10.1016/j.iref.2016.04.002},
+	url = {https://www.sciencedirect.com/science/article/pii/S1059056016300156},
+	author = {Cui, Jin and In, Francis and Maharaj, Elizabeth Ann},
+	keywords = {Libor–OIS spread change determinants, Credit and counterparty risks, Market liquidity and volatility, Banking system leverage, State of the economy, Bank risk fundamentals},
+	abstract = {We investigate the determinants of five major currency Libor–OIS spread changes during the long run and interbank market distress periods. Consistent with recent studies, we find that systemic credit and counterparty risks, market liquidity, and volatility are spread determinants. However, the impact and relevance of these determinants change, depending on the stages of the interbank market crisis. We show that commercial bank leverage and the state of the economy are additional spread drivers. We also discover that the key USD spread is strongly related to banks' risk tolerance levels, capital concerns, and secondary market liquidity during the crisis, even after controlling for other factors.}
+}
+
+@article{Black_Scholes,
+	ISSN = {00223808, 1537534X},
+	URL = {http://www.jstor.org/stable/1831029},
+	abstract = {If options are correctly priced in the market, it should not be possible to make sure profits by creating portfolios of long and short positions in options and their underlying stocks. Using this principle, a theoretical valuation formula for options is derived. Since almost all corporate liabilities can be viewed as combinations of options, the formula and the analysis that led to it are also applicable to corporate liabilities such as common stock, corporate bonds, and warrants. In particular, the formula can be used to derive the discount that should be applied to a corporate bond because of the possibility of default.},
+	author = {Black, Fischer and Scholes, Myron},
+	journal = {Journal of Political Economy},
+	number = {3},
+	pages = {637--654},
+	publisher = {University of Chicago Press},
+	title = {The Pricing of Options and Corporate Liabilities},
+	urldate = {2022-08-13},
+	volume = {81},
+	year = {1973}
+}
+
+@article{Bjerksund_Spread_Options_Lognormal,
+	author = {Bjerksund, Petter and Stensland, Gunnar},
+	title = {Closed form spread option valuation},
+	journal = {Quantitative Finance},
+	volume = {14},
+	number = {10},
+	pages = {1785-1794},
+	year  = {2014},
+	publisher = {Routledge},
+	doi = {10.1080/14697688.2011.617775},
+	
+	URL = { 
+	https://doi.org/10.1080/14697688.2011.617775
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/14697688.2011.617775
+	
+	}
+	
+}
+
+@article{Poitras_Spread_Options_Arithmetic,
+	author = {Poitras, Geoffrey},
+	title = {Spread options, exchange options, and arithmetic Brownian motion},
+	journal = {Journal of Futures Markets},
+	volume = {18},
+	number = {5},
+	pages = {487-517},
+	doi = {https://doi.org/10.1002/(SICI)1096-9934(199808)18:5<487::AID-FUT1>3.0.CO;2-Z},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/%28SICI%291096-9934%28199808%2918%3A5%3C487%3A%3AAID-FUT1%3E3.0.CO%3B2-Z},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/%28SICI%291096-9934%28199808%2918%3A5%3C487%3A%3AAID-FUT1%3E3.0.CO%3B2-Z},
+	year = {1998}
+}
+
+@article{Herath_Copula_Crack_Spread,
+	author = {Herath, Hemantha and Kumar, Pranesh and Amershi, Amin},
+	year = {2011},
+	month = {01},
+	pages = {1-22},
+	title = {Crack spread option pricing with copulas},
+	volume = {37},
+	journal = {Journal of Economics and Finance},
+	doi = {10.1007/s12197-011-9171-1}
+}
+
+@article{Kim_NonNormal_Spread,
+	title = {Modeling non-normal corporate bond yield spreads by copula},
+	journal = {The North American Journal of Economics and Finance},
+	volume = {53},
+	pages = {101210},
+	year = {2020},
+	issn = {1062-9408},
+	doi = {https://doi.org/10.1016/j.najef.2020.101210},
+	url = {https://www.sciencedirect.com/science/article/pii/S1062940820301078},
+	author = {Jong-Min Kim and Dong H. Kim and Hojin Jung},
+	keywords = {Copula, Equity volatility, Spread},
+	abstract = {This research focuses on modeling for how corporate bond yield spreads are affected by explanatory variables such as equity volatility, interest rate volatility, r, slope, rating, liquidity, coupon rate, and maturity. The existing literature assumes normality and linearity in the analysis, which is not the case in our sample. Thus, through a powerful and flexible copula approach, we study the dependence at the mean of the joint distribution by using the Gaussian copula marginal regression method and the dependence structure at the tails by using various copula functions. To our knowledge, this is the first application of the copula marginal regression model to bond market data. In addition, we employ several copula functions to test for the tail dependence between yield spreads and other explanatory variables. We find stronger tail dependence in the joint upper tail for the relation between equity volatility and yield spreads, among others. This result indicates the positive effect of equity volatility on yield spreads in the upper tail is greater than that in the low tail. This finding should be useful to practitioners, such as investors. By relying on better-fitting, more meaningful statistical models, this paper contributes to the extant literature on how corporate bond yield spreads are determined.}
+}
+
+@article{Schwartz_Ornstein,
+	author = {Schwartz, Eduardo S.},
+	title = {The Stochastic Behavior of Commodity Prices: Implications for Valuation and Hedging},
+	journal = {The Journal of Finance},
+	volume = {52},
+	number = {3},
+	pages = {923-973},
+	doi = {https://doi.org/10.1111/j.1540-6261.1997.tb02721.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-6261.1997.tb02721.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1540-6261.1997.tb02721.x},
+	abstract = {ABSTRACT In this article we compare three models of the stochastic behavior of commodity prices that take into account mean reversion, in terms of their ability to price existing futures contracts, and their implication with respect to the valuation of other financial and real assets. The first model is a simple one-factor model in which the logarithm of the spot price of the commodity is assumed to follow a mean reverting process. The second model takes into account a second stochastic factor, the convenience yield of the commodity, which is assumed to follow a mean reverting process. Finally, the third model also includes stochastic interest rates. The Kalman filter methodology is used to estimate the parameters of the three models for two commercial commodities, copper and oil, and one precious metal, gold. The analysis reveals strong mean reversion in the commercial commodity prices. Using the estimated parameters, we analyze the implications of the models for the term structure of futures prices and volatilities beyond the observed contracts, and for hedging contracts for future delivery. Finally, we analyze the implications of the models for capital budgeting decisions.},
+	year = {1997}
+}
+
+@article{Eyigungor_Markov_Spreads,
+	title={Sovereign Debt Spreads in a Markov Switching Regime},
+	author={Eyigungor, Burcu},
+	journal={Manuscript, UCLA},
+	year={2006},
+	publisher={Citeseer}
+}
