--- a/002_LaTeX/spread_na_rynkach_finansowych.tex
+++ b/002_LaTeX/spread_na_rynkach_finansowych.tex
@@ -4,6 +4,7 @@
 
 \section{Popularne rodzaje spreadów}
 \input{popularne_spready}
+\label{sec:popularne_spready}
 
 \section{Modelowanie spreadów}
 \input{modele_spreadow}
