Add: arima-garch-copula model description

--- a/002_LaTeX/modele_spreadow.tex
+++ b/002_LaTeX/modele_spreadow.tex
@@ -27,6 +27,6 @@ Próbą uwzględnienia autokorelacji w modelach komponentów spreadu jest użyci
 $$ dS_i(t) =S_i(t)[-\lambda (\log S_i(t) - \mu_i)dt + \sigma_i dW_i(t)],$$
 gdzie $\lambda_i>0$,  $\mu_i \in \R$, $\sigma_i >0$, oraz $\{W_1(t)\}_t$ i $\{W_2(t)\}_t$ są dwoma procesami Wienera o korelacji $\rho$.\\
 
-Spread jest modelowany wtedy jako różnica tych dwóch procesów. Nie poprawia to problemu gaussowskości procesu czy struktury korelacji między komponentami, oraz zmuszeni jesteśmy do numerycznej analizy rozwiązani. Lecz jest to pierwszy krok w stronę bardziej poprawnych modeli dla komponentów spreadu. Wychodząc od tej idei pojawiła się ogromna lista prac w których analityczność modelu jest porzucona w dążeniu do poprawniejszego modelu opisującego zarówno modele brzegowe komponentów, jak i model zależności miedzy nimi. \cite{Herath_Copula_Crack_Spread}, \cite{Eyigungor_Markov_Spreads}, \cite{Espen_Crack_Spread_Copula}, czy \cite{Bernard_Pricing_Multivariate_Options_with_copulae} pokazują różne techniki, od modeli ARMA-GARCH, przez procesy Levy'ego, po modele \emph{Markov switching regime} do opisu dynamiki komponentów spreadu, które radzą sobie z empiryczną ciężkoogonowością i rozwiązują problem gaussowskości.\\
+Spread jest modelowany wtedy jako różnica tych dwóch procesów. Nie poprawia to problemu gaussowskości procesu czy struktury korelacji między komponentami, oraz dodatkowo zmuszeni jesteśmy do numerycznej analizy rozwiązania. Lecz jest to pierwszy krok w stronę bardziej poprawnych modeli dla komponentów spreadu. Wychodząc od tej idei pojawiła się ogromna lista prac w których analityczność modelu jest porzucona w dążeniu do poprawniejszego modelu opisującego zarówno modele brzegowe komponentów, jak i model zależności miedzy nimi. \cite{Herath_Copula_Crack_Spread}, \cite{Eyigungor_Markov_Spreads}, \cite{Espen_Crack_Spread_Copula}, czy \cite{Bernard_Pricing_Multivariate_Options_with_copulae} pokazują różne techniki, od modeli ARMA-GARCH, przez procesy Levy'ego, po modele \emph{Markov switching regime} do opisu dynamiki komponentów spreadu, które radzą sobie z empiryczną ciężkoogonowością i rozwiązują problem gaussowskości.\\
 
 Wciąż pozostaje jednak problem połączenia ich w spójny model dla spreadu, w sposób który uchwyci ich strukturę zależności. Tę problematykę poruszymy w kolejnym rozdziale opisując podejście kopułowe.
