Add: Finalized and reviewed spread chapter

--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -486,3 +486,9 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	year={2006},
 	publisher={Citeseer}
 }
+
+@article{KGHM,
+author = {{KGHM Polska Miedź S.A. Group}},
+title = {The management board's report on the activities of KGHM Polska Miedź S.A. and of the KGHM Polska Miedź S.A. Group in 2021},
+year = {2021},
+}
