--- a/002_LaTeX/popularne_spready.tex
+++ b/002_LaTeX/popularne_spready.tex
@@ -8,17 +8,17 @@ $$ s(t) = \alpha_1S_1(t) - \alpha_2S_2(t) - \cdots -\alpha_nS_n(t).$$
 
 \subsubsection{Rynek instrumentów o stałym dochodzie}
 
-Rynek instrumentów o stałym dochodzie posiada bogatą gamę spreadów. Spread między stopami swapowymi różnych krajów, mierzy (implikowane) różnice pomiędzy tymi rynkami dotyczące ryzyka kredytowego i ryzyka płynności. Przykładami mogą być spready francusko-niemieckie, czy niemiecko-duńskie. Inną klasą spreadów na tym rynku jest spread kredytowy - czyli różnica między stopą zwrotu obligacji obarczonych ryzykiem, jak korporacyjne, względem zwrotu na obligacjach o znikomym ryzyku, jak rządowe. Jest to przykład \emph{quality spreadu}, czyli spreadu gdzie $S_1$ i $S_2$ są to ceny podobnego produktu, ale różniącego się jakością.\\
-Inne klasy spreadów na tym rynku to \emph{tenor spreads}, jak różnica między wartościami LIBORu dla tenorów 6M i 3M, czy różnica między stopami zwrotu długoterminowych obligacji a bonów skarbowych. Finalnie warto wspomnieć o istnieniu \emph{issuer yield spreadów}, jak \emph{municipal-goverment} czy \emph{municipal-corporate} (\cite{Fixed_Income}).
+Rynek instrumentów o stałym dochodzie posiada bogatą gamę spreadów. Spread między stopami swapowymi różnych krajów, mierzy (implikowane) różnice pomiędzy tymi rynkami dotyczące ryzyka kredytowego i ryzyka płynności. Przykładami mogą być spready francusko-niemieckie, czy niemiecko-duńskie. Inną klasą spreadów na tym rynku jest spread kredytowy - czyli różnica między stopą zwrotu obligacji obarczonych ryzykiem, jak korporacyjne, względem zwrotu z obligacji o znikomym ryzyku, jak rządowe. Jest to przykład \emph{quality spreadu}, czyli spreadu gdzie $S_1$ i $S_2$ są to ceny podobnego produktu, ale różniącego się jakością.\\
+Inne klasy spreadów na tym rynku to \emph{tenor spreads}, jak różnica między wartościami LIBORu dla tenorów 6M i 3M, czy różnica między stopami zwrotu długoterminowych obligacji a bonów skarbowych. Finalnie warto wspomnieć o istnieniu \emph{issuer yield spreadów}, jak \emph{municipal-goverment} czy \emph{municipal-corporate} spread (\cite{Fixed_Income}).
 
 
 \subsubsection{Rynek energii}
 
-Przechodząc na inny rynek, zazwyczaj zmieniać się będzie charakter popularnych na nim spreadów. Rynek energii to przede wszystkim \emph{processing spready}, czyli spready wynikające z różnicy ceny zakupu surowca, a ceny sprzedaży wytworzonego produktu, oraz \emph{temporal spready}/\emph{calendar spready} - czyli różnice w cenie aktywa o różnych porach dnia/różnych porach roku.\\
-Na tym rynku, spready pozwalają oszacować koszty produkcji, transportu, przechowania towaru, czyli efektywność linii produkcyjnej. Do najpilniej obserwowanych z nich należy \emph{crack spread}, czyli różnica między ceną ropy naftowej a wyprodukowanych z niej produktów ropopochodnych. Podobnego rodzaju spreadów, o równie istotnym znaczeniu jest wiele - między innymi \emph{dark spread}, \emph{spark spread}, \emph{quark spread} i inne. Każdy odnosi się do różnicy ceny innego surowca (gazu, węgla, uranu i innych) a ceny wyprodukowanej z niego energii.\\
-Wraz ze wzrostem świadomości społeczeństwa na temat zmian klimatycznych, oraz wzrostem regulacji mających na celu zmniejszenie ilości wytwarzanych gazów cieplarnianych, pojawiły się również ciekawe rodzaje spreadów jak \emph{dark green spread}, \emph{clean dark spread}, czy \emph{clean spark spread}. Są one wariacjami powyższych spreadów energetycznych, z dodatkowym uwzględnieniem trzeciego komponentu, jakim jest konieczność nabycia certyfikatów emisyjnych (\cite{Carmona_Clean_Spreads}).
+Przechodząc na inny rynek, zazwyczaj zmieniać się będzie charakter popularnych na nim spreadów. Rynek energii to przede wszystkim \emph{processing spready}, czyli spready wynikające z różnicy ceny zakupu surowca, a ceny sprzedaży wytworzonego produktu, oraz \emph{temporal spready}/\emph{calendar spready} - jak różnice w cenie energii o różnych porach dnia/różnych porach roku.\\
+Na tym rynku, spready pozwalają oszacować koszty produkcji, transportu, przechowania towaru; czyli efektywność linii produkcyjnej. Wśród najpilniej obserwowanych z nich należy wymienić \emph{crack spread}, czyli różnica między ceną ropy naftowej a wyprodukowanych z niej produktów ropopochodnych. Podobnego rodzaju spreadów, o równie istotnym znaczeniu jest jednak dużo więcej - między innymi \emph{dark spread}, \emph{spark spread}, \emph{quark spread} i inne. Każdy odnosi się do różnicy ceny konkretnego surowca (gazu, węgla, uranu i innych) a ceny wyprodukowanej z niego energii.\\
+Wraz ze wzrostem świadomości społeczeństwa na temat zmian klimatycznych, oraz wzrostem regulacji mających na celu zmniejszenie ilości wytwarzanych gazów cieplarnianych, pojawiły się również nowe rodzaje spreadów jak \emph{dark green spread}, \emph{clean dark spread}, czy \emph{clean spark spread}. Są one wariacjami powyższych spreadów energetycznych, z dodatkowym uwzględnieniem trzeciego komponentu, jakim jest konieczność nabycia certyfikatów emisyjnych i służą jako wskaźniki "green premium", czyli dodatkowego kosztu środowiskowego (\cite{Carmona_Clean_Spreads}).
 
 \subsubsection{Rynek surowców}
 
-Pod hasłem spreadów na rynku surowców w dużej mierze kryją się processing spready wymienione wcześniej w ramach rynku energii. Poza tym jednak istotną rolę pełnią tu \emph{forward spready} - czyli różnice w cenach kontraktów forward na surowce oraz \emph{locational spready} - różnice między cenami tego samego surowca w dwóch różnych miejscach na świecie. Pełnią one rolę informacyjną, ponieważ można z nich implikować sentyment uczestników rynku dotyczący przyszłych cen surowców i ich substytutów (\emph{corn-oat} czy \emph{wheat-corn} spread), oraz podobnie jak w przypadku rynku energii - efektywność linii produkcyjnej.\\
-Przykładem processing spreadu na rynku surowców będzie \emph{soybean crush spread}, dokładniej omówiony w rozdziale \ref{ch:zastosowanie_do_danych}, polegający na kupnie ziaren soi a sprzedaży olejku sojowego oraz mączki sojowej - realizowany jest najczęściej w formie forward spreadu (\cite{Agro_Spreads}).
+Pod hasłem spreadów na rynku surowców w dużej mierze kryją się processing spready wymienione wcześniej w ramach rynku energii. Poza tym jednak istotną rolę pełnią tu \emph{futures spready} - czyli różnice w cenach spot i futures na surowce oraz \emph{locational spready} - różnice między cenami tego samego surowca w dwóch różnych miejscach na świecie. Spredy te, jak \emph{corn-oat} czy \emph{wheat-corn} spread są obecne na rynkach tak długo, że traktowane jako osobne aktywa pozwalające spekulować na rynkach zbóż.\\
+Przykładem processing spreadu na rynku surowców będzie \emph{soybean crush spread}, dokładniej omówiony w rozdziale \ref{ch:zastosowanie_do_danych}, polegający na kupnie ziaren soi a sprzedaży olejku sojowego oraz mączki sojowej - realizowany najczęściej w formie forward spreadu lub futures spreadu (\cite{Agro_Spreads}).
