--- a/002_LaTeX/model_kopulowy_spreadu.tex
+++ b/002_LaTeX/model_kopulowy_spreadu.tex
@@ -7,7 +7,7 @@ $$ r_{i, t+1} = \log[S_i(t+1)] - \log[S_i(t)],$$
 
 gdzie $i\in\{1,2\}$. Niech $\mathcal{F}_t = \sigma(r_{1,s}, r_{2,s}, s\leqslant t)$ będzie filtracją reprezentującą całą wiedzę o procesie cen aktywów do momentu $t$.\\
 
-Celem jest otrzymanie spójnego modelu łącznego dla $S_1$ i $S_2$, pozwalającego na symulację i obliczenie spreadu. Model składać się będzie kilku komponentów: indywidualne modele szeregów czasowych dla komponentów spreadu, oraz model struktury zależności między nimi. Uściślając: zakładać będziemy, że aktywa poruszają się zgodnie z pewnym procesem klasy ARIMA(p,d,q)-GARCH(m,n), oraz że struktura zależności między reziduami zadana jest poprzez kopułę $C^{\Pra}(u, v; \Theta)$ o wektorze parametrów $\Theta$, zdefiniowaną względem fizycznej miary probabilistycznej $\Pra$.\\
+Celem jest otrzymanie spójnego modelu łącznego dla $S_1$ i $S_2$, pozwalającego na symulację i obliczenie spreadu. Model składać się będzie kilku komponentów: indywidualnych modeli szeregów czasowych dla komponentów spreadu, oraz modelu struktury zależności między nimi. Uściślając: zakładać będziemy, że aktywa poruszają się zgodnie z pewnym procesem klasy ARIMA(p,d,q)-GARCH(m,n), oraz że struktura zależności między reziduami zadana jest poprzez kopułę $C^{\Pra}(u, v; \Theta)$ o wektorze parametrów $\Theta$, zdefiniowaną względem fizycznej miary probabilistycznej $\Pra$.\\
 
 Najpierw, w celu uchwycenia struktury zależności czasowej każdego z aktywów osobno, modelujemy \emph{warunkową wartość oczekiwaną} ich logzwrotów poprzez proces ARIMA(p,d,q):
 
