Add: r-vine, d-vine, c-vine descriptions

--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -15,7 +15,6 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{placeins}
-
 \graphicspath{{Figs}}
 \bibliographystyle{apalike}
 
@@ -45,6 +44,7 @@
 \newcommand{\Corr}{\text{Cor}}
 \newcommand{\Cov}{\text{Cov}}
 \newcommand{\Var}{\text{Var}}
+\newcommand{\Nu}{\mathcal{V}}
 
 \makeatletter
 \newcommand*{\defeq}{\mathrel{\rlap{%
