--- a/002_LaTeX/pair_copula_constructions.tex
+++ b/002_LaTeX/pair_copula_constructions.tex
@@ -1,6 +1,6 @@
-Zaczniemy od przykładu w trzech wymiarach, aby zilustrować czym jest idea \emph{Pair copula construction} (PCC). Ogólną ideą jest to, aby wielowymiarowy rozkład zmiennej losowej rozbić na dwuwymiarowe komponenty modelowane za pomocą dwuwymiarowych kopuł.\\
+Zaczniemy od przykładu w trzech wymiarach, aby zilustrować czym jest \emph{Pair copula construction} (PCC). Ogólną ideą jest to, aby wielowymiarowy rozkład zmiennej losowej rozbić na dwuwymiarowe komponenty modelowane za pomocą dwuwymiarowych kopuł.\\
 
-W poniższych rozważaniach przydadzą nam się następujące lematy dotyczące relacji między gęstością kopuły a rozkładami warunkowymi:
+W poniższych rozważaniach przydadzą nam się następujący lemat dotyczący relacji między gęstością kopuły a rozkładami warunkowymi:
 
 \begin{lemma}
 	Rozkład warunkowy dwuwymiarowej zmiennej losowej można przedstawić w języku kopuły:	
@@ -24,7 +24,7 @@ Aby zilustrować PCC, rozpatrzmy rozkład $3$-wymiarowy o gęstości $f(x_1, x_2
 
 $$ f(x_1, x_2, x_3) = f_{3|12}(x_3|x_1, x_2)f_{2|1}(x_2|x_1)f_1(x_1).$$
 
-Celem jest sfaktoryzowanie tego wyrażenia do postaci wykorzystującej co najwyżej dwuwymiarowe kopuły lub jednowymiarowe rozkłady. Widzimy, że w tym celu należy rozłożyć $f_{3|12}$ oraz $f_{2|1}$. \\
+Celem jest sfaktoryzowanie tego wyrażenia do postaci wykorzystującej co najwyżej dwuwymiarowe kopuły lub jednowymiarowe rozkłady brzegowe. Widzimy, że w tym celu należy rozwinąć $f_{3|12}$ oraz $f_{2|1}$. \\
 Korzystając z lematu \ref{lem:copula_representation_of_conditional_density} otrzymujemy bezpośrednio $f_{2|1}$ oraz $f_{3|1}$ (które przyda się za chwilę) jako:
 \begin{equation*}
 	\begin{split}
@@ -33,7 +33,7 @@ Korzystając z lematu \ref{lem:copula_representation_of_conditional_density} otr
 	\end{split}
 \end{equation*}
 
-Natomiast w celu otrzymania $f_{3|12}$ będziemy musieli przejść przez dwuwymiarowy rozkład $f_{13|2}(x_1, x_3|x_2)$, o rozkładach brzegowych $F_{1|2}(x_1|x_2)$ oraz $F_{3|2}(x_3|x_2)$ i kopuli warunkowej $c_{13;2}$~-~czyli kopuli rozkładu $(X_1, X_3) | X_2=x_2$ i zaaplikować do niego twierdzenie Sklara \ref{thm:sklar_theorem_density}:
+Natomiast w celu otrzymania $f_{3|12}$ będziemy musieli przejść przez dwuwymiarowy rozkład $f_{13|2}(x_1, x_3|x_2)$. Ma on rozkłady brzegowe $F_{1|2}(x_1|x_2)$ oraz $F_{3|2}(x_3|x_2)$ i kopułę warunkową $c_{13;2}$~-~czyli kopułę rozkładu $(X_1, X_3) | X_2=x_2$. Zaaplikujemy do niego twierdzenie Sklara \ref{thm:sklar_theorem_density}:
 
 \begin{equation*}
 	\begin{split}
@@ -55,8 +55,8 @@ Finalnie otrzymujemy dekompozycję $f(x_1, x_2, x_3)$ do postaci:
 	\label{eq:PCC}
 \end{equation}
 
-Powyższe czynniki są jedynie dwuwymiarowymi kopułami i (warunkowymi) rozkładami brzegowymi. Taką dekompozycję nazwiemy Pair Copula Construction (PCC). Zaletą takiej reprezentacji nad wielowymiarową kopułą jest to, że ma więcej niżej-wymiarowych komponentów, przez co pozwala na bardziej elastyczny model. Realne dane rzadko mają regularną strukturę zależności która może być dobrze opisana jedną, wielowymiarową kopułą (\cite{Czado_Vine_Copulas}), dlatego też PCC lepiej dopasowują się do danych.\\
-Zwróćmy jednak uwagę na fakt, że nie jest to jedyna PCC która opisuje rozkład $f(x_1, x_2, x_3)$. Istnieją poniższe, równoważne reprezentacje:
+Powyższe czynniki są jedynie dwuwymiarowymi kopułami oraz rozkładami warunkowymi lub brzegowymi. Taką dekompozycję nazwiemy Pair Copula Construction (PCC). Zaletą takiej reprezentacji nad wielowymiarową kopułą jest to, że ma większą liczbę niżej-wymiarowych komponentów, przez co pozwala lepiej dopasować model do danych. Realne dane rzadko mają regularną strukturę zależności która może być dobrze opisana jedną, wielowymiarową kopułą (\cite{Czado_Vine_Copulas}), dlatego też PCC radzi sobie z tym lepiej.\\
+Zwróćmy jednak uwagę na fakt, że nie jest to jedyna PCC która opisuje rozkład $f(x_1, x_2, x_3)$. Istnieją poniższe, równoważne reprezentacje - do których wrócimy pod koniec sekcji \ref{subsec:vine_copula}.
 
 \begin{equation}
 	\begin{split}
